apps/postiz/postiz-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postiz
  namespace: postiz
  labels:
    app.kubernetes.io/name: postiz
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: postiz
